tests/solidity-semantic-tests/out/errors/require_error_stack_check/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_stack_check.sol.C.approval_program() -> uint64:
main:
    intcblock 64 1 0
    bytecblock "x" 0x151f7c75
    txn ApplicationID
    bnz main_after_if_else@2
    bytec_0 // "x"
    pushbytes 0x
    app_global_put
    intc_1 // 1
    return

main_after_if_else@2:
    pushint 4096
    bzero
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0xa28910b0 0x5ba0c08b 0x3f4abdfd // method "e(uint512)uint512", method "f(bool,uint512,uint512,uint512)void", method "x()uint512"
    txna ApplicationArgs 0
    match e f x
    err


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_stack_check.sol.C.e[routing]() -> void:
e:
    txna ApplicationArgs 1
    dup
    len
    dup
    intc_0 // 64
    ==
    assert // invalid number of bytes for arc4.uint512
    intc_0 // 64
    <=
    assert // overflow
    intc_0 // 64
    bzero
    b|
    bytec_1 // 0x151f7c75
    swap
    concat
    log
    intc_1 // 1
    return


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_stack_check.sol.C.f[routing]() -> void:
f:
    txna ApplicationArgs 1
    dup
    len
    intc_1 // 1
    ==
    assert // invalid number of bytes for arc4.bool
    intc_2 // 0
    getbit
    txna ApplicationArgs 2
    len
    intc_0 // 64
    ==
    assert // invalid number of bytes for arc4.uint512
    txna ApplicationArgs 3
    dup
    len
    intc_0 // 64
    ==
    assert // invalid number of bytes for arc4.uint512
    txna ApplicationArgs 4
    len
    intc_0 // 64
    ==
    assert // invalid number of bytes for arc4.uint512
    dig 1
    intc_1 // 1
    <=
    assert // ABI bool validation
    swap
    assert // E
    bytec_0 // "x"
    swap
    app_global_put
    intc_1 // 1
    return


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_stack_check.sol.C.x[routing]() -> void:
x:
    intc_2 // 0
    bytec_0 // "x"
    app_global_get_ex
    assert // check x exists
    dup
    len
    intc_0 // 64
    <=
    assert // overflow
    intc_0 // 64
    bzero
    b|
    bytec_1 // 0x151f7c75
    swap
    concat
    log
    intc_1 // 1
    return
